--- a/src/App.css
+++ b/src/App.css
@@ -191,3 +191,66 @@ margin-bottom: 5px;
   color: white;
   margin-top: 10px;
 }
+
+.contact-me-container {
+  max-width: 600px;
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #f9f9f9;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 20px;
+}
+
+.contact-me-container h2 {
+  text-align: center;
+  margin-bottom: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.contact-form .form-group {
+  margin-bottom: 15px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.contact-form .form-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.contact-form .form-group input,
+.contact-form .form-group textarea {
+  width: 100%;
+  padding: 8px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.contact-form .form-group textarea {
+  resize: vertical;
+  height: 100px;
+  font-family: 'Roboto', sans-serif;
+}
+
+.submit-button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+  background-color:   rgb(227, 213, 255);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  cursor: pointer;
+  font-family: 'Roboto', sans-serif;
+  transition: 0.6S;
+}
+
+.submit-button:hover {
+  background-color:   rgb(68, 41, 121);
+}
